<resources>
    <string name="app_name">Eyepetizer</string>
    
    <string name="app_chinese_name">开    眼</string>
    <string name="app_english_introduce">Daily appetizers for your eyes，Bon eyepetit</string>
    <string name="app_chinese_introduce">每日精选视频推介，让你大开眼界。</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_find">发现</string>
    <string name="navigation_hot">热门</string>
    <string name="navigation_mine">我的</string>
</resources>
