<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_background">
    <ImageView
        android:id="@+id/ic_icon_splash"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_action_focus_white_no_margin"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/tv_eyes_english_name"
        android:layout_width="match_parent"
        android:layout_below="@+id/ic_icon_splash"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/font26"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tv_eyes_chinese_name"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_eyes_english_name"
        android:layout_height="wrap_content"
        android:text="@string/app_chinese_name"
        android:textSize="@dimen/font22"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tv_english_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_chinese_intro"
        android:text="@string/app_english_introduce"
        android:textColor="@color/colorWhite"
        android:layout_centerInParent="true"
        android:textSize="@dimen/font16"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/tv_chinese_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/app_chinese_introduce"
        android:textColor="@color/colorWhite"
        android:layout_centerInParent="true"
        android:textSize="@dimen/font16"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
